crates/flight-ipc/tests/snapshots/snapshot_tests__ipc_msg_telemetry_update.snap
---
source: crates/flight-ipc/tests/snapshot_tests.rs
assertion_line: 128
expression: msg.to_json()
---
{"type":"TelemetryUpdate","altitude":35000.0,"airspeed":250.0,"heading":90.0}
