crates/flight-ipc/tests/snapshots/snapshot_tests__protocol_version.snap
---
source: crates/flight-ipc/tests/snapshot_tests.rs
assertion_line: 172
expression: PROTOCOL_VERSION
---
1.0.0
