crates/flight-ipc/tests/snapshots/snapshot_tests__supported_features.snap
---
source: crates/flight-ipc/tests/snapshot_tests.rs
assertion_line: 178
expression: features
---
[
    "device-management",
    "health-monitoring",
    "profile-management",
    "force-feedback",
    "real-time-telemetry",
]
